$Id$
Version 1.1.2 (?? ??? 2006)
 - Added new Color Picker
 - Fixed bug [ 1573961 ] Excessive LDAP connections for single calendar query
 - Fixed bug [ 1594714 ] upcomming.php doesn't work
 - Closed bug [ 1508701 ] starting 'ControlPanel' creates an error
 - Fixed bug [ 1593524 ] No CSS for "login.php" since "css_cacher-php" update
 - Added new About WebCalendar page
 - Fixed problem with AS used in sql table aliases
 - Fixed bug [ 1561485 ] User sorting doesn't work with LDAP users
 - Fixed bug [ 1592079 ] undefined constant MENU_DATE_TOP
 - Fixed bug [ 1591892 ] disabling one 'root'-item the whole menue-items are
 - Implemented RFE [ 1425299 ] location of the 'topmenu' below customize header
 - Implemented RFE [ 1455565 ] Nice menu.
 - Implemented RFE [ 1532277 ] First- and Lastname should be displayed instead of Username
 - Implemented RFE [ 1588600 ] configurable menu
 - Fixed "bug" [ 1591243 ] perl-script 'check_translation.pl' and
   'update_translation.pl' doesn't work properly.
   Changed $show_missing = 0 back to $show_missing = 1.
 - Fixed bug [ 1591329 ] preview-view of the calendar in 'system-settings' has 2 'today
 - Fixed bug [ 1590474 ] Webcalendar 1.1.1 Repeat
 - Fixed bug [ 1521851 ] 'deleted entries' can be reactivate by 'activity.php'
 - Applied PATCH [ 1570573 ] Use <ul> list in view_entry.php
 - Fixed bug [ 1588205 ] Warning in preferences re ANSI_X3.4-1968
 - Fixed bug [ 1587046 ] error messages during to use the 'installation-wizard'
 - Fixed bug [ 1582833 ] list_unapproved.php can't approve group of events
 - Fixed bug [ 1587041 ] error messages during the 'login.php'
 - Created common mail function in WebCalMailer.class
 - Created new generate_application_name() function
 - Created new is_weekend() function
 - Created new generate_activity_log() function
 - Fixed bug [ 1580720 ] Missing menus
 - Fixed bug [ 1583074 ] Switching between 'Languages' will erase the entries