@@ -57,7 +57,7 @@ $webcalConfig = array (
 'DISPLAY_DESC_PRINT_DAY'=>'Y',
 'DISPLAY_MOON_PHASES'=>'N',
 'DISPLAY_LOCATION'=>'N',
-'DISPLAY_LONG_WEEKDAYS'=>'N',
+'DISPLAY_LONG_DAYS'=>'N',
 'DISPLAY_MINUTES'=>'N',
 'DISPLAY_SM_MONTH'=>'Y',
 'DISPLAY_TASKS'=>'N',
