@@ -12,6 +12,7 @@ Version 1.1.2 (?? ??? 2006)
 
   - New Features / Enhancements:
     = User Interface
+      + Added new feature 'Display Long Day Names'
       + Added new Color Picker with many options
       + Added new About WebCalendar page
       + Reports can now contain 'fullname'
